Sandbox only via classloader